tests/rosetta/out/Swift/active-directory-search-for-a-user.error
run error: exit status 1
/tmp/TestMochiToSwiftactive-directory-search-for-a-user2245035358/001/main.swift:3:21: error: value of optional type '[String]?' must be unwrapped to a value of type '[String]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:30Z
 2 | func search_user(_ directory: [String: [String]], _ username: String) -> [String] {
 3 |     return directory[username]
   |                     |- error: value of optional type '[String]?' must be unwrapped to a value of type '[String]'
   |                     |- note: coalesce using '??' to provide a default when the optional value contains 'nil'
   |                     `- note: force-unwrap using '!' to abort execution if the optional value contains 'nil'
 4 | }
 5 | func main() {

/tmp/TestMochiToSwiftactive-directory-search-for-a-user2245035358/001/main.swift:6:18: error: heterogeneous collection literal could only be inferred to '[String : Any]'; add explicit type annotation if this is intentional
 4 | }
 5 | func main() {
 6 |     let client = ["Base": "dc=example,dc=com", "Host": "ldap.example.com", "Port": 389, "GroupFilter": "(memberUid=%s)"]
   |                  `- error: heterogeneous collection literal could only be inferred to '[String : Any]'; add explicit type annotation if this is intentional
 7 |     let directory = ["username": ["admins", "users"], "john": ["users"]]
 8 |     let groups = search_user(directory, "username")

/tmp/TestMochiToSwiftactive-directory-search-for-a-user2245035358/001/main.swift:6:9: warning: initialization of immutable value 'client' was never used; consider replacing with assignment to '_' or removing it
 4 | }
 5 | func main() {
 6 |     let client = ["Base": "dc=example,dc=com", "Host": "ldap.example.com", "Port": 389, "GroupFilter": "(memberUid=%s)"]
   |         `- warning: initialization of immutable value 'client' was never used; consider replacing with assignment to '_' or removing it
 7 |     let directory = ["username": ["admins", "users"], "john": ["users"]]
 8 |     let groups = search_user(directory, "username")
